--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,11 @@ management:
     enabled : true
     sampling:
       probability: 1.0
+  endpoints:
+    web:
+      base-path: ""
+      path-mapping:
+        health: health
+  health:
+    ldap:
+      enabled: false
