--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 core-project-uri: ${SERVICE_SCHEME}://${CORE_PROJECT_HOST}:${CORE_PROJECT_PORT}
+core-contractor-uri: ${SERVICE_SCHEME}://${CORE_CONTRACTOR_HOST}:${CORE_CONTRACTOR_PORT}
 
 server:
   port: ${SERVER_PORT:8080}
