--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,13 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-common</artifactId>
+			<version>2.8.6</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
 
 	<repositories>
