--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
 			<version>2.8.6</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.12.0</version>
+		</dependency>
 	</dependencies>
 
 
